--- a/src/wholeComponents/forgotPassword/ForgotPassword.css
+++ b/src/wholeComponents/forgotPassword/ForgotPassword.css
@@ -1,7 +1,7 @@
 
 .forgotPasswordForm{
     padding:0 10%;
-    font-family: 'Roboto', sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: oblique;
     text-transform: uppercase;
     animation: form-fade-in 1.5s ease-in-out; 
@@ -42,14 +42,14 @@
     width:100%;
     margin:3% 0;
     padding:2.5%;
-    border-radius: 8px;
+    border-radius: 10px;
     font-family: inherit;
     font-style: inherit;
     text-transform: uppercase;
     letter-spacing: 0.06vw;
     font-size: 1.8vmax;
     cursor: pointer;
-    background: rgb(60, 60, 60);
+    background: rgb(114, 2, 2);
     color:rgb(243, 201, 201);
     transition: all 0.1s ease-in-out;
 }
@@ -60,10 +60,10 @@
 
 .forgotPasswordError{
     border: 2px solid black;
-    background: rgb(60, 60, 60);
+    background: red;
     color:white;
     padding:2%;
-    border-radius: 10px;
+    border-radius: 20px;
     font-size: 1.25vmax;
     display: block;
     text-transform: capitalize;
