--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ html{
   background: transparent;
   cursor: pointer;
   z-index: 5;
-  font-family:'Roboto', sans-serif;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-style: oblique;
   transition: all 0.3s ease-in-out;
 }
@@ -51,7 +51,7 @@ html{
   border-radius: 1.5vmax;
   background: transparent;
   font-size:1.5vmax;
-  border: 2px solid #48f3d1;
+  border: 2px solid #db0510;
   z-index: 5;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
@@ -59,7 +59,7 @@ html{
 .themeButton:hover{
   margin-top: 0.2%;
   margin-right:0.3%;
- box-shadow: 2px 2px 15px black,-2px -2px 15px black;
+ box-shadow: 2px 2px 15px #db0510,-2px -2px 15px #db0510 ;
 }
 @media only screen and (max-width: 1100px){
   .menuBar{
