--- a/src/pages/Login&SignUp/loginSignUp.css
+++ b/src/pages/Login&SignUp/loginSignUp.css
@@ -31,10 +31,10 @@
     transition: all 0.6s ease-in-out;
 }
 .loginInnerDiv{
-    border-right: 5px solid rgb(49, 239, 201);
+    border-right: 5px solid darkred;
 }
 .signUpInnerDiv{
-    border-left: 5px solid rgb(49, 239, 201);
+    border-left: 5px solid darkred;
 }
 .loginSelection{
     justify-self: right;
@@ -48,18 +48,18 @@
     padding:2.5vmax;
     font-size: 3.6vmax;
     text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: oblique;
     letter-spacing: 1.5px;
     background: transparent;
-    color:rgb(49, 239, 201);
-    border-radius: 1vmax;
+    color:darkred;
+    border-radius: 2vmax;
     transition: all 0.6s ease-in-out;
     cursor: pointer;
 }
 .loginSelection:hover,.signUpSelection:hover{
     color:black;
-    background:rgb(49, 239, 201);
+    background: darkred;
     
 }
 .loginOuterForm,.signUpOuterForm{
@@ -68,7 +68,7 @@
     height: 100%;
     z-index: 2;
     transition: all 0.6s ease-in-out;
-    background:rgb(49, 239, 201);
+    background:darkred;
     overflow:hidden;
     display:grid;
     place-items: center;
@@ -85,7 +85,7 @@
     height: 100%;
     z-index: 2;
     transition: all 0.6s ease-in-out;
-    background:rgb(49, 239, 201);
+    background:darkred;
     overflow:hidden;
     display:grid;
     place-items: center;
@@ -111,11 +111,11 @@
         height: 100%;
     }
     .loginInnerDiv,.signUpInnerDiv{
-        border: 2px solid whitesmoke;
+        border: 2px solid red;
     }
     .loginSelection,.signUpSelection{
-        border: 2px solid whitesmoke;
-        background: blue;
+        border: 2px solid red;
+        background: darkred;
         justify-self: center;
     }
    
