--- a/src/wholeComponents/MenuBar/menuBar.css
+++ b/src/wholeComponents/MenuBar/menuBar.css
@@ -18,7 +18,7 @@
     }
 } */
 .innerMenuDiv{
-    background: blue;
+    background: darkred;
     height:100vh;
 }
 .userDiv{
@@ -38,13 +38,13 @@
     margin: 0% 2% 0% 2%;
     padding:1%;
     border:none;
-    font-family: 'Roboto', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 2.75vmin;
     font-style: oblique;
     text-transform: uppercase;
     border-radius: 25px;
-    background: white;
-    color:blue;
+    background: black;
+    color:red;
     overflow: hidden;
     cursor: pointer;
     transition:all 0.2s ease-in-out;
@@ -70,7 +70,7 @@
     font-size: 1.25vmax;
     border-bottom: 2px solid black;
     transition: all 0.4s ease-in-out;
-    font-family:'Roboto', sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-transform: uppercase;
     font-style: oblique;
     cursor: pointer;
@@ -130,19 +130,19 @@
 }
 .emptyArea>button{
     border:none;
-    color:blue;
+    color:red;
     background: transparent;
     font-size: 1.5vmax;
     cursor:pointer;
 }
 .emptyArea>button:hover{
-    text-shadow: 0.1vw 0.1vw 0.5vw blue,-0.1vw -0.1vw 0.5vw blue;
+    text-shadow: 0.1vw 0.1vw 0.5vw red,-0.1vw -0.1vw 0.5vw red;
 }
 .userSection{
     position: fixed;
     width:100%;
     height:100%;
-    color:blue;
+    color:red;
     z-index: 2;
     display: grid;
     place-items: center;
@@ -152,7 +152,7 @@
     width: 80%;
     height:80%;
     max-width: 70vw;
-    border:1px solid blue;
+    border:1px solid darkred;
     border-radius: 3vw;
     display: grid;
     grid-template-columns: 1fr;
@@ -167,10 +167,10 @@
     align-items: center;
     border-top-right-radius: 3vw;
     border-top-left-radius: 3vw;
-    border-bottom:2px solid blue;
+    border-bottom:2px solid darkred;
 }
 .infoSection:hover{
-    box-shadow:inset 0.1vw 0.1vw 1vw blue,-0.1vw -0.1vw 1vw blue;
+    box-shadow:inset 0.1vw 0.1vw 1vw red,-0.1vw -0.1vw 1vw red;
 }
 .profilePic{
     width:100%;
@@ -180,20 +180,20 @@
 .profilePic>img{
     width:12vmax;
     height:12vmax;
-    border:2px solid blue;
-    border-radius: 10vmax;
+    border:2px solid darkred;
+    border-radius: 15vmax;
 }
 .profilePic>img:hover{
-    box-shadow: 0.1vw 0.1vw 0.5vw blue,-0.1vw -0.1vw 0.5vw blue;
+    box-shadow: 0.1vw 0.1vw 0.5vw red,-0.1vw -0.1vw 0.5vw red;
 }
 .aboutSection{
     font-size: 1.5vmax;
 }
 .aboutSection h1{
-    font-family:'Roboto', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: oblique;
     letter-spacing: 0.15vw;
-    text-shadow: 0.1vw 0.1vw 0.1vw blue,-0.1vw -0.1vw 0.1vw blue;
+    text-shadow: 0.1vw 0.1vw 0.1vw darkred,-0.1vw -0.1vw 0.1vw darkred;
 }
 .aboutSection i {
     letter-spacing: 0.05vw;
@@ -218,13 +218,13 @@
     width:90%;
     height:90%;
     margin: 0 5% 5% 5%;
-    border:2px solid blue;
+    border:2px solid darkred;
     border-radius: 2vw;
     display:grid;
     align-items: flex-start;
     overflow: hidden;
     overflow-y: auto;
-    background:blue;
+    background:darkred;
 }
 .pages button{
     justify-self: stretch;
@@ -233,7 +233,7 @@
     background: transparent;
     cursor:pointer;
     font-size: 1.5vmax;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     text-transform: uppercase;
     transition: all 0.2s ease-in-out;
     cursor:pointer;
@@ -250,7 +250,7 @@
     font-size: larger;
 }
 .pages:hover{
-    box-shadow: 0.1vw 0.1vw 1vw whitesmoke,-0.1vw -0.1vw 1vw whitesmoke;
+    box-shadow: 0.1vw 0.1vw 1vw red,-0.1vw -0.1vw 1vw red;
 }
 .signOutSection{
     width:100%;
@@ -261,8 +261,8 @@
 .signOutSection button{
     border:none;
     background: transparent;
-    color:black;
-    font-family: 'Roboto', sans-serif;
+    color:red;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size:2vmax;
     font-style: oblique;
     letter-spacing: 0.05vw;
@@ -272,8 +272,8 @@
 }
 .signOutSection button:hover{
     padding:1%;
-    border:2px solid blue;
-    box-shadow: 0.1vw 0.1vw 1vw blue,-0.1vw -0.1vw 1vw blue;
+    border:2px solid red;
+    box-shadow: 0.1vw 0.1vw 1vw red,-0.1vw -0.1vw 1vw red;
 
 }
 @media only screen and (max-width: 1100px){
