--- a/src/wholeComponents/passwordReset/passwordReset.css
+++ b/src/wholeComponents/passwordReset/passwordReset.css
@@ -1,8 +1,8 @@
 
 .passwordResetForm{
     padding:10%;
-    color:blue;
-    font-family:'\'Roboto', sans-serif;
+    color:red;
+    font-family:'Courier New', Courier, monospace;
     font-style: oblique;
     animation: form-fade-in 0.6s ease-in-out; 
 }
@@ -20,9 +20,9 @@
     /* border-bottom-left-radius: 0;
     border-top-right-radius: 0; */
     margin:20% 10%;
-    background: whitesmoke;
-    color:blue;
-    font-family: 'Roboto', sans-serif;
+    background: rgba(128, 128, 128, 0.246);
+    color:red;
+    font-family: 'Courier New', Courier, monospace;
     font-style: oblique;
     font-size: 2vmax;
     text-align: center;
@@ -48,19 +48,19 @@
     font-style: inherit;
     font-weight: bold;
     font-size: 1.8vmax;
-    background:whitesmoke;
+    background: red;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
 .passwordResetSubmit:hover{
-     background: whitesmoke;
-     color:blue;
+     background: black;
+     color:red;
      border:2px solid red;
 }
 
 .passwordResetError{
-    background:whitesmoke;
-    color:blue;
+    background: rgb(255, 0, 0);
+    color:white;
     padding:2%;
     border-radius: 20px;
     font-size: larger;
